# pytest-cmake-presets

./: .gitignore  LICENSE.md  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: coverage.yml  lint.yml
src/cmake_presets/: __init__.py  condition.py  hooks.py  items.py  macro.py  presets.py  vendor.py
tests/: conftest.py  test_collection.py  test_item_vendor.py  test_vendor.py
